--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin-top: 100px;
         }
         h1 {
-            color: #4CAF50;
+            color: #af704c;
         }
         p {
             color: #333;
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>I love You Keerthii</h1>
+    <h1>I love You Keerthi</h1>
     <p>This site is hosted on <strong>Amazon S3</strong> using static website hosting.</p>
 </body>
 </html>
